--- a/static/index.html
+++ b/static/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🤖 生活管家AI Agent</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
+    <meta name="description" content="一个使用FastAPI和AI Agent构建的智能生活管理平台">
+    
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="/static/css/style.css?v=1.3" rel="stylesheet">
 </head>
 <body>
-    <!-- 导航栏 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
+    <!-- 顶部导航栏 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <i class="bi bi-robot"></i> 生活管家AI Agent
             </a>
@@ -21,24 +24,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#dashboard" onclick="showSection('dashboard')">
-                            <i class="bi bi-house"></i> 仪表板
-                        </a>
+                        <a class="nav-link active" href="#" onclick="PageManager.showSection('dashboard')"><i class="bi bi-house-door-fill"></i> 仪表板</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#plans" onclick="showSection('plans')">
-                            <i class="bi bi-calendar-check"></i> 计划管理
-                        </a>
+                        <a class="nav-link" href="#" onclick="PageManager.showSection('plans')"><i class="bi bi-calendar-check"></i> 计划管理</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#todos" onclick="showSection('todos')">
-                            <i class="bi bi-check2-square"></i> TodoList
-                        </a>
+                        <a class="nav-link" href="#" onclick="PageManager.showSection('todos')"><i class="bi bi-check2-square"></i> TodoList</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#analytics" onclick="showSection('analytics')">
-                            <i class="bi bi-graph-up"></i> 数据分析
-                        </a>
+                        <a class="nav-link" href="#" onclick="PageManager.showSection('analytics')"><i class="bi bi-graph-up"></i> 数据分析</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +41,14 @@
     </nav>
 
     <!-- 主内容区域 -->
-    <div class="container mt-4">
+    <main class="container-fluid mt-5 pt-3">
+        <!-- 加载指示器 -->
+        <div id="loading">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+        
         <!-- 仪表板页面 -->
         <div id="dashboard-section" class="section">
             <div class="row">
@@ -253,7 +255,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <!-- 创建计划模态框 -->
     <div class="modal fade" id="createPlanModal" tabindex="-1">
@@ -356,13 +358,6 @@
         </div>
     </div>
 
-    <!-- 加载指示器 -->
-    <div id="loading" class="position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center" style="background: rgba(0,0,0,0.5); z-index: 9999; display: none !important;">
-        <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">加载中...</span>
-        </div>
-    </div>
-
     <!-- Toast 通知 -->
     <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
         <div id="toast" class="toast" role="alert">
@@ -378,8 +373,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/static/js/app.js"></script>
+    <script src="/static/js/app.js?v=1.3"></script>
 </body>
 </html> 
